@@ -203,8 +203,6 @@
             --add-opens java.sql/java.sql=ALL-UNNAMED
             --add-opens java.sql.rowset/javax.sql.rowset.serial=ALL-UNNAMED
 
-            --illegal-access=permit
-            -Dillegal-access=permit
             -DtestGroups=all
           </argLine>
         </configuration>
@@ -332,7 +330,7 @@
             <version>2.22.2</version>
             <configuration>
               <argLine>
-                ${argLine} -Dcoverage=true -DtestGroups=all -Dillegal-access=permit --illegal-access=permit
+                ${argLine} -Dcoverage=true -DtestGroups=all
                 --add-opens java.base/java.lang=ALL-UNNAMED
                 --add-opens java.base/java.net=ALL-UNNAMED
                 --add-opens java.base/java.math=ALL-UNNAMED
